changes have been made to the classes BruteForce, HackingStatisticalAnalysis, CodeCaesars, Validator